# CROMP

./: .gitignore  CITATION.cff  LICENSE  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test_build.yml
pkgs/cromp/: __init__.py
pkgs/cromp/src/: predict.py  train.py  train_v1.py  train_v2.py
tests/: cromp_tests.py  requirements.txt
tests/data/: benchmark_wage_data.xlsx  scb_swe_male_non_manual_pvt_wages_data.xlsx  trend_data.csv
