[metadata]
description_file = README.md
license_files = LICENSE.txt

[dynamic]
keywords = cromp, constrained regression, interpretable ai

[options]
python_requires = >=3.11
install_requires =
   scipy
   pandas
   numpy

[options.extras_require]
test = 
    scikit-learn
    pandas
    cvxpy
    openpyxl >= 3.1.0
    pymc-marketing
    arviz
